@@ -1,4 +1,6 @@
 2003-01-07	blytkerchan
+	* poll_response.pl: new experimental implementation..
+
 	* jailust.questions.sql: add ask_email field
 	* poll_response.pl: new file
 
